--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                             <li><a href="#">시음신청</a></li>
                             <li><a href="#">MY녹즙</a></li>
                             <li><a href="#">이벤트</a></li>
+                            <li><a href="#">창업안내</a></li>
                         </ul>
                     </nav>
 
@@ -76,6 +77,21 @@
 
         <!-- 비주얼 영역-->
         <section class="visual">
+            <div class="swiper-container sw-visual">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <span class="visual-img">
+                            <img src="images/visual_1.jpg" alt="">
+                        </span>
+                    </div>
+                    <div class="swiper-slide">
+                        <span class="visual-img">
+                            <img src="images/visual_2.jpg" alt="">
+                        </span>
+                    </div>
+                </div>
+                <div class="swiper-pagination sw-visual-pg"></div>
+            </div>
         </section>
         <!-- //비주얼 영역-->
 
@@ -85,6 +101,40 @@
                 <p class="customer-tit">고객님 안녕하세요!</p>
                 <div class="customer-wrap clearfix">
                     <div class="customer-slide left">
+                        <div class="swiper-container sw-cu">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <a href="#"><span class="customer-img cu-1"></span>
+                                        <p>음용내역</p>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#"><span class="customer-img cu-2"></span>
+                                        <p>음용제품변경</p>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#"><span class="customer-img cu-3"></span>
+                                        <p>찜한제품</p>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#"><span class="customer-img cu-4"></span>
+                                        <p>고객번호등록/찾기</p>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#"><span class="customer-img cu-5"></span>
+                                        <p>스마트청구서</p>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#"><span class="customer-img cu-6"></span>
+                                        <p>음용내역</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="customer-login right">
                         지금 로그인하여 <b>맞춤 제품</b>을<br>
@@ -270,7 +320,7 @@
                     <div class="faq-box">
                         <a href="#">
                             <p>
-                                <strong>음용</strong> <br>
+                                <strong>음용고객</strong> <br>
                                 출장이나 휴가 때문에 <br>
                                 잠깐 못 먹을거 같은데 <br>
                                 어떻게 해야하나요?
@@ -293,7 +343,7 @@
         <!-- //FAQ 영역 -->
 
         <!-- 배너2 영역 -->
-        <section class="banner-2">
+        <!-- <section class="banner-2">
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -312,7 +362,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- //배너2 영역 -->
 
         <!-- 커뮤니티 영역 -->
@@ -373,7 +423,7 @@
             <div class="f-bottom">
                 <div class="container clearfix">
                     <span class="f-logo left">
-                        <img src="images/f_logo.png" alt="풀무원 녹즙">
+                        <img src="images/f-logo.png" alt="풀무원 녹즙">
                     </span>
                     <div class="f-copy left">
                         <p class="f-address">
